Adding Vector test.

--- a/Tests/index.html
+++ b/Tests/index.html
@@ -1,16 +1,17 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Capsule Framework Tests</title>
-<link rel="stylesheet" href="lib/qunit.css">
-<script src="lib/qunit.js"></script>
-</head>
-<body>
-<div id="qunit"></div>
-<div id="qunit-fixture"></div>
-<script src="../Build/capsule.js"></script>
-<script src="capsule.js"></script>
-<script src="math.js"></script>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>Capsule Framework Tests</title>
+		<link rel="stylesheet" href="lib/qunit.css">
+		<script src="lib/qunit.js"></script>
+	</head>
+	<body>
+		<div id="qunit"></div>
+		<div id="qunit-fixture"></div>
+		<script src="../Build/capsule.js"></script>
+		<script src="capsule.js"></script>
+		<script src="math.js"></script>
+		<script src="Vector.js"></script>
+	</body>
 </html>
